# medical-patients

./: .clinerules  .do-app-spec-redis-service.yaml  .dockerignore  .env.example  .env.production.example  .env.test  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .trivyignore  API_DOCUMENTATION.md  API_UI_INTEGRATION_PLAN.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_REVIEW_PROMPT.md  CLAUDE_SIMPLE_REVIEW.md  CLAUDE_SS_INTEGRATION.md  ConfigurationPanel.tsx  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.ubuntu2404  Dockerfile.unified  ENVIRONMENT_CONFIG.md  FacilityEditor.tsx  FrontEditor.tsx  GETTING_STARTED.md  GO_PORTABILITY_SUMMARY.md  HOW_TO_USE_REVIEW_PROMPTS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MASTER_REVIEW_PROMPT.md  MIGRATION_GUIDE.md  MILESTONE_COMPLETION_REPORT.md  MORTALITY_FACTORS.md  MORTALITY_PARAMETERS.md  Makefile  (+77 more)
.claude/: settings.local.json
alembic_migrations/: env.py
death_analysis/: patients_100_20250823_190236.json
death_analysis_v2/: patients_100_20250823_193559.json
death_validation/: patients_100_20250823_212220.json
debug_output/: patients_1_20250823_102715.json  patients_1_20250823_102727.json
docs/: api-key-cli.md  cli-test-summary.md  cli-testing-strategy.md  managed-redis-setup.md  prometheus-metrics-demo.md  redis-migration.md  task-2-metrics-proof.md  task-2-optimizations-summary.md  task-2-performance-results.md  timeline-viewer-deployment-summary.md  timeline-viewer-deployment.md  ubuntu-24-04-installation.md
fresh_test_output/: patients_4_20250823_102756.json
injury-chain/: ARCHITECTURE_SUMMARY.md  COMPLETE_PROBABILISTIC_INTEGRATION.md  COMPLETE_SYSTEM_DESIGN.md  CURRENT_VS_PROPOSED_COMPARISON.md  DIAGNOSTIC_ACCURACY_SYSTEM.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  MARKOV_CHAIN_INTEGRATION.md  MASTER_IMPLEMENTATION_PLAN.md  PROBABILISTIC_MODELS_IMPLEMENTATION.md  PROMPT_FOR_NEW_SESSION.md  README.md  SESSION_FILES_SUMMARY.md  START_NEW_SESSION_PROMPT.txt  TREATMENT_IMPLEMENTATION_GUIDE.md  UNIFIED_SYSTEM_ARCHITECTURE.md  WARFARE_PATTERN_INTEGRATION.md
medical-modeling/: DEVELOPMENT-PLAN.md
medical_simulation/: AGENT_REVIEW_REPORT.md  config_validator.py  csu_batch_coordinator.py  data_optimization_strategy.md  death_tracker.py  demo_health_deterioration.py  deterioration_calculator.py  deterioration_plan.md  disability_tracker.py  facility_capacity_manager.py  health_score_engine.py  implementation_plan.md  overflow_router.py  patient_flow_orchestrator.py  patient_metadata_design.md  transport_scheduler.py  treatment_modifiers.py  treatment_protocols.py  triage_mapper.py
memory/: compress.sh  current-session.md  update.sh  weekly-maintenance.sh
memory-bank/: README.md  active-context.md  api-alignment-fixes.md  backlog.md  cli-commands.md  closed-tickets.md  code-patterns.md  common-issues.md  component-reference.md  data-dictionary.md  data-structures.md  developer-guide.md  docker-compose-modernization.md  domain-knowledge.md  enhanced-start-dev-summary.md  enhancement-opportunities.md  future-enhancements.md  git-workflow.md  medical-military-context.md  open-tickets.md  perf-001-redis-caching-summary.md  product-context.md  progress.md  project-brief.md  refactoring-epics-and-tickets.md  refactoring-progress-summary.md  system-patterns.md  tech-context.md  template-fixes-summary.md  troubleshooting-guide.md  workflows-processes.md
modeling-research/: HFM239.md  modeling-research.md  simulating-health.md  usaf-178-modeling.md
nginx/: staging.conf  timeline.conf
output_test/: patients_100_20250821_184946.json  patients_100_20250821_185022.json  patients_100_20250821_185023.json  patients_10_20250821_183839.json  patients_15_20250820_123307.json  patients_20_20250821_183929.json  patients_20_20250821_183930.json  patients_30_20250821_183929.json  patients_30_20250821_184023.json  patients_30_20250821_184024.json  patients_45_20250821_184024.json  patients_50_20250821_184023.json
patient-timeline-viewer/: .env.production  Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
patient_generator/: __init__.py  app.py  config_manager.py  config_versions.json  confusion_matrices.json  database.py  database_legacy.py  demographics.json  demographics.py  diagnostic_uncertainty.py  evacuation_time_manager.py  evacuation_transit_times.json  facility_markov_chain.py  fhir_generator.py  flow_simulator.py  formatter.py  fronts_config.json  injuries.json  medical.py  medical_conditions.json  medical_simulation_bridge.py  models_db.py  nationality_data.py  patient.py  patient_optimized.py  performance.py  repository.py  scenario_presets.json  schemas_config.py  schemas_config.py.bak2  simulation_parameters.json  temporal_generator.py  transition_matrices.json  treatment_protocols.json  treatment_utility_model.py  visualization_data.py  warfare_modifiers.py  warfare_patterns.json
refactoring-plan/: README.md  REFACTORING_PROMPT.md  code_examples.py  implementation_checklist.md  performance_monitor.py  test_utilities.py
scripts/: api_key_cli.py  benchmark_generation.py  create-v1.1-branch.sh  deploy-staging-same-server.sh  deploy-staging.sh  deploy-timeline-viewer.sh  ensure_demo_key.py  generate-api-key.sh  init-setup-noninteractive.sh  init-setup.sh  init-simple.sh  install-task.sh  memory_profile.py  monitor-staging.sh  performance_baseline.py  setup-staging-env.sh  setup-ubuntu-24.sh  test-platform.ps1  test-platform.sh  test_api_performance.py  test_api_scale.py  test_demo_key.py  test_generation_metrics.py  test_metrics.py  test_optimizations.py  test_pool.py  test_redis_connection.py  test_redis_ssl.py  ubuntu-24-complete-install.sh  version.sh
src/: main.py
static/: index-modular.html  index.html  test-modules.html  visualizations.html
tasks/: database.yml  development.yml  docker.yml  frontend.yml  linting.yml  platform.yml  testing.yml  timeline.yml
test_deaths/: patients_20_20250823_213318.json
test_fixed/: patients_50_20250823_213724.json
tests/: README.md  (+49 more)
(+216 files in other folders)
